Fixes PR Comments
- Flyover is now slightly larger which removes the horizontal scrolling on certain sized screens.
- Time & date now show in all chat message sizes
- Only time displays on messages sent 'today' and only the date on prior days.

--- a/src/style/site.css
+++ b/src/style/site.css
@@ -30,7 +30,7 @@ Responsive Styles
         text-align: left;
     }
     .flyover {
-        width: 40vw;
+        width: 50vw;
     }
 }
 
@@ -43,7 +43,7 @@ Responsive Styles
         text-align: left;
     }
     .flyover {
-        width: 30vw;
+        width: 40vw;
     }
 }
 
@@ -56,7 +56,7 @@ Responsive Styles
         text-align: left;
     }
     .flyover {
-        width: 25vw;
+        width: 30vw;
     }
 }
 
